--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -4,9 +4,10 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0.5rem;
+  margin-left: 1.5rem;
 
   h1 {
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     animation: moveInLeft 1s ease-out;
 
     background-image: linear-gradient(
