--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -1,34 +1,44 @@
 // FORMS
 
 .form-control {
-  margin: 2rem 0;
+  margin: 0.2rem 0;
   label {
     display: block;
     font-size: 1.5rem;
   }
   input {
-    width: 100%;
+    width: 90%;
     height: 4rem;
     margin: 0.8rem;
-    padding: 0.3rem 0.7rem;
+    padding: 0.1rem 0.8rem;
     font-size: 1.7rem;
+    border-radius: 0.6rem;
+  }
+  &--notvalid {
+    @include shakeItem--3;
+    border: 2px solid red;
+  }
+  &--valid {
+    border: 0.1rem solid black;
   }
   &--check {
     @include clearfix;
     label {
       display: inline-block;
       position: relative;
-      font-size: 2rem;
+      font-size: 1.5rem;
       height: 5rem;
+      margin-left: 1rem;
 
       text {
         margin: auto;
       }
       input {
         display: inline-block;
-        height: 2rem;
+        height: 1.8rem;
         position: absolute;
-        margin-left: -3.5rem;
+        margin-left: -2rem;
+        top: -0.5rem;
       }
     }
   }
