--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,11 +6,12 @@
 
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/utilites';
 
 @import 'components/button';
 @import 'components/header';
 @import 'components/addTask';
-@import 'components/task1';
+@import 'components/task';
 @import 'components/Footer';
 @import 'components/forms';
 
