--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,3 +16,7 @@
 @import 'components/forms';
 
 @import 'layout/container';
+
+@import 'pages/login';
+@import 'pages/signup';
+@import 'pages/about';
