--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -14,6 +14,10 @@
   box-shadow: 0.5rem 0rem 1rem rgba($color-black, 0.3); // x y blur color opacity
 }
 
+@mixin customBorderShadow-3 {
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.5); // x y blur color opacity
+}
+
 @mixin shakeItem--3 {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
