--- a/src/sass/components/_Footer.scss
+++ b/src/sass/components/_Footer.scss
@@ -1,10 +1,37 @@
-footer {
-  text-align: center;
-  animation: moveInBottom 1s ease-out;
-  p {
-    display: inline-block;
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  margin-left: 1.5rem;
+  background-color: $color-grey-light-2;
+  h4 {
+    font-size: 2.5rem;
+    animation: moveInLeft 1s ease-out;
+    padding: 1rem;
+    background-image: linear-gradient(
+      to left,
+      $color-primary-light,
+      $color-primary-dark
+    );
+    color: transparent;
+    -webkit-background-clip: text;
+    transition: all 0.2s;
+    letter-spacing: 0.5rem;
+
+    margin: auto;
   }
-  .createdBy {
-    padding: 2rem;
+  &--1 {
+    margin-top: 2rem;
+  }
+  &--2 {
+    margin-top: -1rem;
+    font-size: 1rem;
+  }
+  &__login {
+    margin-left: 1rem;
+  }
+  &__signup {
+    margin-right: 1rem;
   }
 }
